Fixed header z-index

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -4,6 +4,7 @@
   height: 4rem;
   width: 100%;
   top: 0;
+  z-index: 1;
 }
 
 .Header-logo {
